# local-downloader

./: README.md  downloader-desktop-app-plan.md  package.json  pnpm-lock.yaml
.github/workflows/: mac-release-diagnostics.yml  release.yml
docs/: example-links.md  macos-signing.md  reddit-video-download-steps.md
scripts/: tauri-appimage-build.sh
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  process_control.rs  redaction.rs  storage.rs  youtube_api_keys.rs
src-tauri/src/download/: chrome_cookies.rs  engine.rs  mod.rs  presets.rs  sites.rs  youtube_export.rs
src-tauri/src/tools/: mod.rs
src/lib/: api.ts  fallback.ts  types.ts
