[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = ["protocol-asset"] }
tauri-plugin-log = "2"
rusqlite = { version = "0.40.1", features = ["bundled"] }
uuid = { version = "1.20.0", features = ["v4", "serde"] }
chrono = { version = "0.4.45", features = ["serde"] }
url = "2.5.8"
regex = "1.12.4"
libc = "0.2"
thiserror = "2.0.18"
tauri-plugin-dialog = "2.7.1"
ureq = "3.2.1"
tauri-plugin-clipboard-manager = "2.3.2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
