[package]
name = "downloader"
version = "0.1.10"
description = "Download videos and media assets."
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "Downloader"
path = "src/main.rs"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.22.1"
aes = "0.8.4"
cbc = { version = "0.1.2", features = ["alloc"] }
log = "0.4"
pbkdf2 = "0.12.2"
tauri = { version = "2.11.3", features = ["protocol-asset"] }
tauri-plugin-log = "2"
rusqlite = { version = "0.40.1", features = ["bundled"] }
sha1 = "0.10.6"
uuid = { version = "1.20.0", features = ["v4", "serde"] }
chrono = { version = "0.4.45", features = ["serde"] }
url = "2.5.8"
regex = "1.12.4"
rust_xlsxwriter = "0.96.0"
libc = "0.2"
thiserror = "2.0.18"
tauri-plugin-dialog = "2.7.1"
ureq = "3.2.1"
sha2 = "0.10.9"
tauri-plugin-clipboard-manager = "2.3.2"

[target.'cfg(target_os = "linux")'.dependencies]
dbus = "0.9.12"
keyring = { version = "3.6.3", default-features = false, features = ["sync-secret-service", "crypto-rust"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = ["windows-native"] }
